[workspace]
members = [
    "crates/melon-common",
    "crates/melond",
    "crates/mbatch",
    "crates/mcancel",
    "crates/mworker",
    "crates/mqueue",
    "crates/mextend",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tonic = "0.12.1"
prost = "0.13"
prost-types = "0.13"
sysinfo = "0.30.13"
nanoid = "0.4.0"
libc = "0.2.155"
whoami = "1.5.1"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
cgroups-rs = "0.3.4"
tempfile = "3.10.1"
tonic-build = "0.12"
