[workspace]
members = [
    "crates/melon-common",
    "crates/melond",
    "crates/mbatch",
    "crates/mcancel",
    "crates/mworker",
    "crates/mqueue",
    "crates/mextend",
    "crates/mshow", "crates/cgroups",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
clap = { version = "4.5.9", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tonic = "0.12.1"
prost = "0.13"
prost-types = "0.13"
sysinfo = "0.30.13"
nanoid = "0.4.0"
libc = "0.2.155"
whoami = "1.5.1"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
cgroups-rs = "0.3.4"
tempfile = "3.10.1"
tonic-build = "0.12"
rusqlite = { version = "0.32.0", features = ["bundled", "chrono"] }
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = {version = "0.4.38" , features = ["serde"] }
tempdir = "0.3.7"
config = "0.13"
serde-aux = "4.5.0"
tokio-stream = "0.1"
assert_cmd = "2.0.15"
predicates = "3.1.2"
uuid = {version="1.10.0", features=["v4", "fast-rng"]}
prettytable-rs = "^0.10"
colored = "2.0"
num_cpus = "1"
thiserror = "1.0"
anyhow = "1.0"
axum = "0.7.5"
tower-http = { version = "0.5.2", features = ["cors"] }
reqwest = { version = "0.12.7", features = ["json"] }
dashmap = "6.0.1"
