[package]
name = "mcancel"
version.workspace = true
edition.workspace = true

[dependencies]
melon-common = { path = "../melon-common" }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
whoami = { workspace = true }
tonic = { workspace = true }

[dev-dependencies]
tempfile = {workspace = true}

[[bin]]
name = "mcancel"
path = "src/main.rs"
