[package]
name = "melon-common"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-bunyan-formatter = { workspace = true }
tracing-log = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
config = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
