[package]
name = "melond"
version = "0.1.0"
edition = "2021"

[dependencies]
melon-common = { path = "../melon-common" }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tonic = { workspace = true }
nanoid = { workspace = true }


[[bin]]
name = "melond"
path = "src/main.rs"
