[package]
name = "melond"
version = "0.1.0"
edition = "2021"

[dependencies]
melon-common = { path = "../melon-common" }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tonic = { workspace = true }
nanoid = { workspace = true }
rusqlite = { workspace = true }
directories = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
serde-aux = { workspace = true }
tokio-stream =  { workspace = true }
axum = { workspace = true, optional = true }
tower-http = {workspace = true, optional = true}
thiserror = {workspace = true}

[dev-dependencies]
tempdir = { workspace = true }
assert_cmd = {workspace = true}
predicates = {workspace = true}
uuid = {workspace = true}
reqwest = {workspace = true}

[lib]
name = "melond"
path = "src/lib.rs"

[[bin]]
name = "melond"
path = "src/main.rs"

[features]
default = ["api"]
api = ["dep:axum", "dep:tower-http"]
