[package]
name = "mextend"
version.workspace = true
edition.workspace = true

[dependencies]
melon-common = { path = "../melon-common" }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tonic = { workspace = true }
whoami = { workspace = true }

[[bin]]
name = "mextend"
path = "src/main.rs"
