[package]
name = "mworker"
version = "0.1.0"
edition = "2021"

[dependencies]
melon-common = { path = "../melon-common" }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tonic = { workspace = true }
sysinfo = { workspace = true }
num_cpus = { workspace = true }
cgroups = { path = "../cgroups", optional = true }

[[bin]]
name = "mworker"
path = "src/main.rs"

[features]
default = ["cgroups"]
cgroups = ["dep:cgroups"]
