[package]
name = "mworker"
version.workspace = true
edition.workspace = true

[dependencies]
melon-common = { path = "../melon-common" }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tonic = { workspace = true }
sysinfo = { workspace = true }
num_cpus = { workspace = true }

[[bin]]
name = "mworker"
path = "src/main.rs"

[features]
default = []
cgroups = ["dep:cgroups"]

[target.'cfg(target_os = "linux")'.dependencies]
cgroups = { path = "../cgroups", optional = true }
